prqlc/prqlc/tests/integration/snapshots/integration__queries__compileall__append_select_simple.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { invoice_id, billing_country }\nappend (\n  from invoices\n  select { invoice_id = `invoice_id` + 100, billing_country }\n)\nfilter (billing_country | text.starts_with(\"I\"))\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_simple.prql
---








--- generic
+++ sqlite
@@ -11,11 +11,11 @@
     billing_country
   FROM
     invoices
 )
 SELECT
   invoice_id,
   billing_country
 FROM
   table_1
 WHERE
-  billing_country LIKE CONCAT('I', '%')
+  billing_country LIKE 'I' || '%'
