prqlc/prqlc/tests/integration/snapshots/integration__queries__compileall__cast.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort {-bytes}\nselect {\n    name,\n    bin = ((album_id | as REAL) * 99)\n}\ntake 20\n"
input_file: prqlc/prqlc/tests/integration/queries/cast.prql
---





--- generic
+++ mssql
@@ -1,19 +1,19 @@
 WITH table_0 AS (
   SELECT
     name,
     CAST(album_id AS REAL) * 99 AS bin,
     bytes
   FROM
     tracks
   ORDER BY
-    bytes DESC
-  LIMIT
-    20
+    bytes DESC OFFSET 0 ROWS
+  FETCH FIRST
+    20 ROWS ONLY
 )
 SELECT
   name,
   bin
 FROM
   table_0
 ORDER BY
   bytes DESC
