prqlc/prqlc/tests/integration/snapshots/integration__queries__compileall__distinct.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nselect {album_id, genre_id}\ngroup tracks.* (take 1)\nsort tracks.*\n"
input_file: prqlc/prqlc/tests/integration/queries/distinct.prql
---

