prqlc/prqlc/tests/integration/snapshots/integration__queries__compileall__group_sort_derive_select_join.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "s\"SELECT album_id,title,artist_id FROM albums\"\ngroup {artist_id} (aggregate { album_title_count = count this.`title`})\nsort {this.artist_id, this.album_title_count}\nderive {new_album_count = this.album_title_count}\nselect {this.artist_id, this.new_album_count}\njoin side:left ( s\"SELECT artist_id,name as artist_name FROM artists\" ) (this.artist_id == that.artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_derive_select_join.prql
---

